--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -17,13 +17,13 @@
 }
 
 .nav-padding {
-  padding: 80px 126px 80px 126px;
+  padding: 1.125vw 4.922vw 3.125vw 4.922vw;
 }
 #header {
   background-color: var(--main-color);
   max-width: 2560px;
   width: 100%;
-  height: 1236px;
+  height: 48.281vw;
   margin: auto;
   position: relative;
 }
@@ -31,7 +31,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 1910px;
+  width: 74.609vw;
   object-fit: fill;
   filter: blur(40px);
   z-index: 0;
@@ -48,22 +48,29 @@
 }
 .nav-wrap {
   list-style: none;
-  color: white;
   display: flex;
-  gap: 104px;
+  gap: 4.063vw;
   cursor: pointer;
 }
-.btm-hdr {
+.nav-wrap > li > a {
+  text-decoration: none;
+  color: white;
+}
+#btm-hdr {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+#btm-hdr img {
+  width: 31.797vw;
+  height: 30.469vw;
+}
 .btm-padding {
-  padding: 95px 300px 96px 300px;
+  padding: 1.711vw 11.719vw 3.75vw 11.719vw;
 }
 .left-content {
-  width: 575px;
-  height: 780px;
+  width: 22.461vw;
+  height: 30.469vw;
 }
 /* fonts */
 .left-content p,
@@ -72,26 +79,26 @@ button {
 }
 .left-content > h1 {
   color: #fff;
-  font-size: 80px;
+  font-size: 3.125vw;
   font-weight: 700;
-  line-height: 96px;
+  line-height: 3.75vw;
 }
 
 .left-content > p {
   color: rgba(255, 255, 255, 0.7);
-  font-size: 24px;
+  font-size: 0.938vw;
   font-weight: 400;
-  line-height: 32px;
-  padding: 35px 0 35px 0;
+  line-height: 1.25vw;
+  padding: 1.367vw 0 1.367vw 0;
 }
 .left-content > button {
   border: none;
   display: flex;
-  padding: 16px 32px;
+  padding: 0.625vw 1.25vw;
   justify-content: center;
   align-items: center;
-  gap: 32px;
-  border-radius: 8px;
+  gap: 1.25vw;
+  border-radius: 0.313vw;
   background: var(
     --Omni-Gradient-1,
     radial-gradient(
@@ -102,7 +109,7 @@ button {
     )
   );
   color: #fff;
-  font-size: 32px;
+  font-size: 1.25vw;
   font-weight: 600;
-  line-height: 40px;
+  line-height: 1.563vw;
 }
