--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -30,6 +30,7 @@
   width: 31.797vw;
   height: 29.727vw;
   gap: 1.875vw;
+  height: inherit;
 }
 .about-us-col > section > h1 {
   color: var(--Omni-Yellow);
@@ -46,8 +47,8 @@
   font-weight: 700;
   line-height: 2.5vw;
 }
-.about-us-col > section > p:nth-child(3) {
-  color: #838383;
+#about-details > p {
+  color: var(--Omni-Dark);
   text-align: justify;
   margin-top: 1.875vw;
   font-family: var(--JakartaSans);
@@ -91,15 +92,17 @@
 .second-col-container {
   display: flex;
   align-items: center;
+  gap: 55px;
   justify-content: space-between;
   margin-top: 2.5vw;
 }
 .col-rectanlge > img {
-  width: 21.641vw;
-  height: 25.057vw;
+  width: 29.641vw;
+  height: 35.057vw;
   border-radius: 10px;
   object-fit: cover;
 }
+
 .second-left-corner > ul {
   list-style: none;
   text-decoration: none;
@@ -147,4 +150,38 @@
   font-size: 0.938vw;
   font-weight: 500;
   line-height: 1.25vw;
+}
+
+#content-placeholder {
+  text-align: center;
+  color: var(--Omni-Dark);
+  margin-left: 10px;
+  font-family: var(--JakartaSans);
+  font-size: 1.938vw;
+  font-weight: 500;
+}
+.circularAvart {
+  padding: 1.25vw;
+}
+
+.inside-padding > span {
+  width: 4.805vw;
+  height: 4.805vw;
+  background: var(--Omni-Yellow);
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.938vw;
+}
+#core-title {
+  color: var(--Omni-Yellow);
+  font-family: var(--Inter);
+  font-size: 3.25vw;
+  text-align: center;
+  font-weight: 600;
+  line-height: 1.563vw;
+
+  margin-bottom: 1.563vw;
 }
