--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -48,6 +48,30 @@ body {
   width: 31.797vw;
   height: 29.727vw;
 }
+.product-read-more {
+  text-decoration: none;
+  width: 12.305vw;
+  margin-top: 1.875vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  border: none;
+  border-radius: 0.313vw;
+  padding: 0.625vw 1.25vw 0.625vw 1.25vw;
+  background: radial-gradient(
+      60.19% 121.58% at 30.25% 20.32%,
+      rgba(200, 45, 150, 0.35) 2.08%,
+      rgba(198, 19, 162, 0.35) 30.73%,
+      rgba(181, 80, 248, 0.71) 100%
+    )
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  color: #fff;
+  font-family: var(--Inter);
+  font-size: 1.25vw;
+  font-weight: 600;
+  line-height: 1.563vw;
+  cursor: pointer;
+}
 .col-details h1,
 p {
   font-family: var(--Inter);
