--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -25,24 +25,74 @@
 #product-main {
   height: inherit;
 }
-.product-us-col {
+.col-product-val {
   display: flex;
   justify-content: space-between;
 }
-.product-us-col > section {
+.product-col-top {
+  display: flex;
+
+  height: inherit;
+  padding-bottom: 1.563vw;
+}
+.sliderwrapper {
+  padding: 4.688vw 0 4.688vw 0;
+}
+.sliderwrapper img {
+  width: 29.641vw;
+  height: 25.057vw;
+  border-radius: 0.781vw;
+}
+.col-left-st {
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.product-col-details > h1 {
+  color: var(--Omni-Dark);
+  margin-top: 16px;
+  font-family: var(--Inter);
+  font-size: 1.8vw;
+  font-weight: 700;
+  line-height: 2.5vw;
+}
+
+.col-left-st > p {
+  color: #838383;
+  width: 15.641vw;
+  margin-top: 1.875vw;
+  font-family: var(--JakartaSans);
+  font-size: 0.938vw;
+  font-weight: 500;
+  line-height: 1.25vw;
+}
+#certified {
+  width: 10.641vw;
+  height: 13.057vw;
+  object-fit: cover;
+}
+#sectionimg {
+  margin-top: 20px;
+  border-radius: 0.391vw;
+  width: 15.641vw;
+  height: 13.057vw;
+}
+.col-product-val > section {
   width: 31.797vw;
   height: 29.727vw;
   gap: 1.875vw;
   height: inherit;
 }
-.product-us-col > section > h1 {
+.col-product-val > section > h1 {
   color: var(--Omni-Yellow);
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
   line-height: 1.563vw;
 }
-.product-us-col > section > p:nth-child(2) {
+.col-product-val > section > p:nth-child(2) {
   color: var(--Omni-Dark);
   margin-top: 16px;
   font-family: var(--Inter);
@@ -50,7 +100,7 @@
   font-weight: 700;
   line-height: 2.5vw;
 }
-.product-us-col > section > p:nth-child(3) {
+.col-product-val > section > p:nth-child(3) {
   color: #838383;
   text-align: justify;
   margin-top: 1.875vw;
@@ -59,7 +109,8 @@
   font-weight: 500;
   line-height: 1.25vw;
 }
-.product-us-col section > button {
+.col-product-val section > button,
+.col-left-st > button {
   margin-top: 1.875vw;
   display: flex;
   justify-content: center;
@@ -86,4 +137,7 @@
   background-color: #83838370;
   width: 100%;
   height: 100%;
+}
+.loop-corner {
+  margin-top: 1.172vw;
 }
