--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -69,6 +69,9 @@
   color: white;
   font-size: 0.938vw;
 }
+.nav-wrap > li > a:hover {
+  border-bottom: 2px solid var(--secondary-color);
+}
 #btm-hdr {
   display: flex;
   justify-content: space-between;
