--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -47,7 +47,7 @@
   font-weight: 700;
   line-height: 2.5vw;
 }
-#about-details > p {
+.about-us-col > section > p:nth-child(3) {
   color: var(--Omni-Dark);
   text-align: justify;
   margin-top: 1.875vw;
@@ -55,6 +55,27 @@
   font-size: 0.938vw;
   font-weight: 500;
   line-height: 1.25vw;
+}
+.highlight {
+  position: relative;
+}
+.videohighlight {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: -7.773vw;
+  max-width: 70.313vw;
+  width: 97%;
+  border-radius: 10px;
+  height: 23.789vw;
+  object-fit: cover;
+}
+.highlight-container {
+  margin-top: 6.992vw;
+  width: 100%;
+  height: 32.984vw;
+  background: #12222f;
 }
 .about-us-col section > button {
   margin-top: 1.875vw;
@@ -81,9 +102,12 @@
 .second-col-wrap {
   margin-top: 4.688vw;
 }
+.second-second-col {
+  background: var(--main-color);
+}
 #second-col-tittle {
   width: 29.492vw;
-  color: var(--Omni-Dark);
+  color: var(--white);
   font-family: var(--JakartaSans);
   font-size: 3.125vw;
   font-weight: 700;
@@ -115,7 +139,16 @@
   border-radius: 0.313vw;
 }
 .selected {
-  background: rgba(255, 107, 202, 0.13);
+  background: var(--Omni-Yellow);
+}
+.third-bg {
+  background: var(--main-color);
+}
+#thid-bg-hg > p:nth-child(2) {
+  color: var(--white);
+}
+#thid-bg-hg > p:nth-child(3) {
+  color: var(--white);
 }
 .third-about-us-col {
   margin-top: 20px;
@@ -154,7 +187,7 @@
 
 #content-placeholder {
   text-align: center;
-  color: var(--Omni-Dark);
+  color: var(--white);
   margin-left: 10px;
   font-family: var(--JakartaSans);
   font-size: 1.938vw;
@@ -176,7 +209,7 @@
   font-size: 1.938vw;
 }
 #core-title {
-  color: var(--Omni-Yellow);
+  color: var(--white);
   font-family: var(--Inter);
   font-size: 3.25vw;
   text-align: center;
