--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -431,7 +431,30 @@ p {
   font-weight: 500;
   line-height: 1.25vw;
 }
+.six-right-corner section > a {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 6.016vw;
+  border: none;
+  border-radius: 0.313vw;
+  padding: 0.625vw 1.25vw 0.625vw 1.25vw;
+  background: radial-gradient(
+      60.19% 121.58% at 30.25% 20.32%,
+      rgba(200, 45, 150, 0.35) 2.08%,
+      rgba(198, 19, 162, 0.35) 30.73%,
+      rgba(181, 80, 248, 0.71) 100%
+    )
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  color: #fff;
+  font-family: var(--Inter);
+  font-size: 1.25vw;
+  font-weight: 600;
+  line-height: 1.563vw;
+}
 .six-right-corner section > button {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: flex-start;
