--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -70,7 +70,7 @@ body {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
+
   cursor: pointer;
 }
 .col-details h1,
@@ -81,20 +81,18 @@ p {
   color: var(--Omni-Yellow);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .col-details > p:nth-child(2) {
   color: var(--Omni-Dark, #12222f);
   font-size: 2.188vw;
   font-weight: 700;
-  line-height: 2.5vw;
+
   padding: 0.625vw 0 1.797vw 0;
 }
 .col-details > p:nth-child(3) {
   color: #838383;
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .col-rectanlge img {
   width: 31.797vw;
@@ -134,14 +132,13 @@ p {
   color: var(--white);
   font-size: 3.188vw;
   font-weight: 900;
-  line-height: 2.5vw;
 }
 .third-card > section > p {
   margin-top: 0.305vw;
   color: var(--white);
   font-size: 1.938vw;
   font-weight: 500;
-  line-height: 2.25vw;
+
   text-align: center;
   width: 32.031vw;
 }
@@ -177,19 +174,19 @@ p {
   font-family: Inter;
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
+  
 }
 .third-col-details .third-col-section > p {
   color: var(--white);
   font-size: 1.875vw;
   font-weight: 700;
-  line-height: 2.188vw;
+  
 }
 .third-col-details p {
   color: var(--white);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
+  
 }
 .third-col-holder {
   max-width: 55.195vw;
@@ -211,14 +208,12 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .fouth-col-details > p {
   color: var(--Omni-Dark);
   font-family: var(--JakartaSans);
   font-size: 3.125vw;
   font-weight: 700;
-  line-height: 3.75vw;
 }
 .service-container {
   margin: 6.875vw 0 0 0;
@@ -238,7 +233,6 @@ p {
   color: var(--Omni-Dark);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .service-container .services-content-container > p {
   width: 23.211vw;
@@ -246,7 +240,6 @@ p {
   color: var(--Omni-Dark);
   font-size: 2.188vw;
   font-weight: 700;
-  line-height: 2.5vw;
 }
 .excerpt-container {
   margin-top: 1.875vw;
@@ -277,7 +270,7 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
+
   cursor: pointer;
 }
 .services-content-container {
@@ -295,7 +288,6 @@ p {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .list-container-holder {
   width: 43.516vw;
@@ -343,7 +335,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .fifth-details-wrap > p:nth-child(2) {
   color: var(--white);
@@ -351,7 +342,6 @@ p {
   margin-top: 0.625vw;
   font-size: 3.125vw;
   font-weight: 700;
-  line-height: 3.75vw;
 }
 .fifth-details-wrap > p:nth-child(3) {
   margin-top: 1.367vw;
@@ -359,7 +349,6 @@ p {
   font-family: var(--Inter);
   font-size: 0.938vw;
   font-weight: 400;
-  line-height: 1.25vw;
 }
 .fifth-details-wrap > button {
   margin-top: 1.367vw;
@@ -382,7 +371,7 @@ p {
   color: #fff;
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
+
   cursor: pointer;
 }
 .fifth-col-container {
@@ -404,7 +393,6 @@ p {
   font-family: var(--JakartaSans);
   font-size: 3.125vw;
   font-weight: 700;
-  line-height: 3.75vw;
 }
 .six-col-container {
   display: flex;
@@ -443,7 +431,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .corner-content > p {
   margin-top: 0.625vw;
@@ -451,7 +438,6 @@ p {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .six-container-holder {
   width: 37.969vw;
@@ -468,7 +454,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .six-right-corner section > p {
   margin-top: 16px;
@@ -476,7 +461,6 @@ p {
   font-family: var(--Inter);
   font-size: 2.188vw;
   font-weight: 700;
-  line-height: 2.5vw;
 }
 .six-right-corner section > ul {
   padding: 1.25vw 0 1.25vw 0;
@@ -487,7 +471,6 @@ p {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .six-right-corner section > a {
   cursor: pointer;
@@ -509,7 +492,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .six-right-corner section > button {
   cursor: pointer;
@@ -531,7 +513,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .seventh-col-wrap {
   margin-top: 4.688vw;
@@ -547,7 +528,6 @@ p {
   width: 29.492vw;
   font-size: 3.125vw;
   font-weight: 700;
-  line-height: 3.75vw;
 }
 .seventh-list {
   margin-top: 5.938vw;
@@ -559,7 +539,6 @@ p {
   width: 25.586vw;
   font-style: normal;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 #seventh-listveiw {
   list-style: none;
@@ -582,7 +561,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 #seventh-listveiw > li .secenth-center {
   display: flex;
@@ -598,14 +576,12 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .nnth-col-wrap > section p:nth-child(2) {
   color: var(--Omni-Dark, #12222f);
   font-family: var(--JakartaSans);
   font-size: 3.125vw;
   font-weight: 700;
-  line-height: 3.75vw;
 }
 .nnth-col-wrap > section p:nth-child(3) {
   margin-top: 2.5vw;
@@ -613,7 +589,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 #nnth-listview {
   list-style: none;
@@ -640,7 +615,6 @@ p {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
 }
 .eight-col-wrap {
   display: flex;
@@ -654,7 +628,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 .eight-col-wrap > section p {
   margin-top: 16px;
@@ -662,7 +635,6 @@ p {
   font-family: var(--Inter);
   font-size: 2.188vw;
   font-weight: 700;
-  line-height: 2.5vw;
 }
 #eight-list-view > li {
   margin-top: 3.125vw;
@@ -682,7 +654,6 @@ p {
   font-family: var(--Inter);
   font-size: 1.25vw;
   font-weight: 600;
-  line-height: 1.563vw;
 }
 #eight-list-view > li > section > p {
   margin-top: 16px;
@@ -690,6 +661,75 @@ p {
   font-family: var(--JakartaSans);
   font-size: 0.938vw;
   font-weight: 500;
-  line-height: 1.25vw;
+
   width: 20.117vw;
+}
+@media (max-width: 788px) {
+  .second-col-wrap {
+    justify-content: center;
+    flex-direction: column;
+    gap: 0;
+  }
+  .col-details {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 63.797vw;
+    height: inherit;
+  }
+  .col-details > p:nth-child(2) {
+    font-size: 4.188vw;
+  }
+  .col-rectanlge > img {
+    display: none;
+  }
+  .col-details > p:nth-child(3) {
+    text-align: justify;
+    font-size: 2.938vw;
+  }
+  .product-read-more {
+    text-decoration: none;
+    width: 20.305vw;
+    font-size: 2.938vw;
+    margin-top: 2.875vw;
+  }
+  .third-col-wrap {
+    height: inherit;
+  }
+  .thirdevenContianer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product-card > section > img {
+    display: none;
+  }
+  .aboutcard > section > img {
+    display: none;
+  }
+  .third-card > section > h1 {
+    color: var(--white);
+    font-size: 6.188vw;
+    font-weight: 900;
+  }
+  .third-card > section > p {
+    font-size: 2.938vw;
+    width: 55.031vw;
+  }
+  .third-card > section > a {
+    width: 27.078vw;
+    height: 6.172vw;
+  }
+  .third-card {
+    width: 100%;
+    height: 45vw;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .third-card > section {
+    margin-top: 0;
+  }
 }
